 	  control to the aliases of on/off/dim/bright. Please refer to the document
 	  DomusRestAPI.doc in the /doc directory.
	* Issue 46 fixed - When creating an alias with spaces in the name, domus.Link
	  did not create a sanitized name with lowercase and underscores.
	* Issue 51 fixed - CN17A commands for on/off were not being properly handled.
  v1.2 - 01/July/2010
 ------
	* Updated heyu config file handling to be agnostic and object oriented. domus.Link
	  will now support a users custom heyu config file without any additional changes.
	  One caveat is that domus.Link will not save comments that are placed at the end
	  of a directive line. But, domus will preserve comments that are on a line by
	  themselves. Internal implementation does validate directive types to valid heyu
	  directives by executing the "heyu conflist" command to get the valid directive list.
	* Updated alias to location(floorplan)/type handling. domus.Link will now dynamically
	  build the alias to location/type map through the alias edit screens. domus.Link
	  will create a db file called aliasmap based on these assignments. This precludes
	  the need for the floorplan file and the floorplan maintenance has been deprecated.
	  To aid in dynamically creating the floorplan, the location field in the alias add
	  and edit windows are now editable as well as dynamically loaded with previously
	  entered locations. When a new heyu conf with aliases is found and there is no alias
	  map, all items are assigned to a default location(unknown) and type(other).

	  The location field IS the edit field for the floorplan items. You can delete
	  it, but if you haven't removed all references to that location in all
	  of your aliases, it is dynamically rebuilt from the current aliases.

	  The blank space at the bottom of the list is a convenience to have a
	  blank area to edit a new location. It really doesn't matter as you can
	  just overwrite the displayed one with a new location and then it will