@@ -18,6 +18,6 @@
  * this program; if not, write to the Free Software Foundation, 
  * Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
-$FRONTEND_VERSION = "1.2";
+$FRONTEND_VERSION = "2.0beta3";
 
 ?>
